--- a/JOGUINHO.html
+++ b/JOGUINHO.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> EDUCAFIN </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <style>
         body {
             background-color: #000;
@@ -123,6 +127,11 @@
         #artigo-link a:hover {
             background-color: #2980b9; /* Cor do link do artigo - hover */
         }
+
+        .carousel-inner img {
+            max-height: 600px;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
@@ -147,6 +156,35 @@
         Investir na educação financeira é investir no futuro, e nosso projeto busca ser uma ponte para o sucesso financeiro dos jovens participantes.
         Com a junção de professores capacitados e instituições que tenham espaços disponíveis, pode-se assim aplicar tal conceito e promover o avanço de nossa juventude.</p>
 </section>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.44.11.jpeg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.44.30.jpeg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://img.freepik.com/fotos-premium/muitas-centenas-e-cinquenta-reais-notas-de-dinheiro-brasileiro-salario-de-pagamento-do-grande-premio-em-fundo-branco-isolado_72932-3494.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
 
 <section id="professores">
     <h2>Professores Responsáveis</h2>
