--- a/JOGUINHO.html
+++ b/JOGUINHO.html
@@ -129,7 +129,8 @@
         }
 
         .carousel-inner img {
-            max-height: 600px;
+            max-height: 950px;
+            border-radius: 5%;
             margin: auto;
         }
     </style>
@@ -138,7 +139,7 @@
 
     <header>
         <div class="logo">
-            <img src="logo-educafin.jpeg" alt="Logo EDUCAFIN">
+            <img src="https://lh4.googleusercontent.com/Givu1z65akUuw8fw-qGuvRjHjrZWG4sHIQPWgFg1nHgwMzI188luK3OdfRlxjjwjstgJd1G3CnxJIhZaw6RSqwL0Ve2ZKHfmTYwBnITvUHrXJQtOCPrnX_7H-t2NmE0AKA=w1280" alt="Logo EDUCAFIN">
         </div>
         <h1> EDUCAFIN </h1>
     </header>
@@ -165,13 +166,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.44.11.jpeg" alt="First slide">
+        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.44.30.jpeg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.44.30.jpeg" alt="Second slide">
+        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 15.00.08.jpeg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://img.freepik.com/fotos-premium/muitas-centenas-e-cinquenta-reais-notas-de-dinheiro-brasileiro-salario-de-pagamento-do-grande-premio-em-fundo-branco-isolado_72932-3494.jpg" alt="Third slide">
+        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.57.56.jpeg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
