--- a/JOGUINHO.html
+++ b/JOGUINHO.html
@@ -128,11 +128,22 @@
             background-color: #2980b9; /* Cor do link do artigo - hover */
         }
 
-        .carousel-inner img {
-            max-height: 950px;
-            border-radius: 5%;
+        #carouselExampleIndicators {
+            max-width: 800px;
             margin: auto;
         }
+
+        .carousel-caption {
+            background: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            padding: 10px;
+        }
+
+        .carousel-inner img {
+            max-height: 900px;
+            margin: auto;
+        }
+
     </style>
 </head>
 <body>
@@ -166,13 +177,25 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.44.30.jpeg" alt="First slide">
+        <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.57.53.jpeg" alt="First slide">
+        <div class="carousel-caption">
+            <h5>Descrição do Slide 1</h5>
+            <p>Informações adicionais sobre o primeiro slide.</p>
+          </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 15.00.08.jpeg" alt="Second slide">
+        <div class="carousel-caption">
+            <h5>Descrição do Slide 2</h5>
+            <p>Informações adicionais sobre o segundo slide.</p>
+          </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.57.56.jpeg" alt="Third slide">
+        <div class="carousel-caption">
+            <h5>Descrição do Slide 3</h5>
+            <p>Informações adicionais sobre o terceiro slide.</p>
+          </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -245,7 +268,7 @@
 
 <section id="instagram-link">
     <div id="artigo-link">
-        <a href="https://meuartigo.brasilescola.uol.com.br/economia-financas/a-importancia-da-educacao-financeira-na-formacao-dos-estudantes.htm" target="_blank"> Leia esse artigo falando sobre a importância de ter Educação Financeira nas Escolas </a>
+        <a href="https://educafinaa.my.canva.site/" target="_blank"> Importância de ter Educação Financeira nas Escolas </a>
     </div>
     <a href="https://www.instagram.com/educafiin" target="_blank"> Siga-nos no Instagram e acompanhe nossa extensão. </a>
 </section>
@@ -272,7 +295,7 @@
 </section>
 
 <footer>
-    educafin@edu.pe.senac.br
+    educafin330@gmail.com
 </footer>
 
 </body>
