--- a/JOGUINHO.html
+++ b/JOGUINHO.html
@@ -179,22 +179,22 @@
       <div class="carousel-item active">
         <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.57.53.jpeg" alt="First slide">
         <div class="carousel-caption">
-            <h5>Descrição do Slide 1</h5>
-            <p>Informações adicionais sobre o primeiro slide.</p>
+            <h5>Prototipagem</h5>
+            <p>Formulário utilizado para pesquisa, começo de tudo.</p>
           </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 15.00.08.jpeg" alt="Second slide">
         <div class="carousel-caption">
-            <h5>Descrição do Slide 2</h5>
-            <p>Informações adicionais sobre o segundo slide.</p>
+            <h5>Prototipagem</h5>
+            <p>Equipe de Prototipagem desenvolvendo o site para enquadrar toda a ação, e contribuindo com as apresentações.</p>
           </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="WhatsApp Image 2024-01-25 at 14.57.56.jpeg" alt="Third slide">
         <div class="carousel-caption">
-            <h5>Descrição do Slide 3</h5>
-            <p>Informações adicionais sobre o terceiro slide.</p>
+            <h5>Reunião com o time</h5>
+            <p>Junção de idealizações para contribuir com o projeto.</p>
           </div>
       </div>
     </div>
@@ -268,7 +268,7 @@
 
 <section id="instagram-link">
     <div id="artigo-link">
-        <a href="https://educafinaa.my.canva.site/" target="_blank"> Importância de ter Educação Financeira nas Escolas </a>
+        <a href="https://educafinaa.my.canva.site/educafinsecundario" target="_blank"> Importância de ter Educação Financeira nas Escolas </a>
     </div>
     <a href="https://www.instagram.com/educafiin" target="_blank"> Siga-nos no Instagram e acompanhe nossa extensão. </a>
 </section>
